--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,8 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/swagger-jsdoc": "^6.0.4",
-    "typescript": "^5.7.2",
-    "ts-node": "^10.9.2"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.96",
