--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./src/index.js",
+    "start": "node index.js",
     "dev"  : "nodemon",
     "test" : "echo \"Error: no test specified\" && exit 1"
   },
