--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
+        "rootDir": "./src",
         "outDir": "./dist",
         "baseUrl": "./",
         "sourceMap": true,
